--- a/src/main/resources/templates/userlogin.html
+++ b/src/main/resources/templates/userlogin.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!--移动设备优先-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>登录学生管理系统</title>
+    <title>[[#{login.title}]]</title>
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
@@ -14,48 +14,43 @@
     <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
 
-    <script th:href="@{js/md5.js}" src="js/md5.js"></script>
+    <script th:href="@{js/common.js}" src="js/common.js"></script>
 
     <link th:href="@{css/common.css}" href="css/common.css" rel="stylesheet">
 
-    <script type="text/javascript">
-        $(document).ready(function() {
-            //ajax submit.
-            $("#form").submit(function()  {
-                var tmp = getMd5($("#password").val());
-                $("#password").val(tmp);
-            });
-        });
-    </script>
 </head>
-<body>
+<body th:class="text-center">
 
-<form th:id="form" th:action="@{/login}" th:method="post">
-    <h1 >[(${error != null}?${error}:'')]</h1>
-    <!--<div class="form-group">
-        <label for="exampleInputEmail1">邮箱</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="邮箱">
-    </div>-->
-    <div class="form-group">
-        <label for="exampleInputName1">用户名</label>
-        <input type="text" th:name="username" class="form-control" id="exampleInputName1" placeholder="用户名">
-    </div>
-    <div class="form-group">
-        <label for="exampleInputPassword1">密码</label>
-        <input type="password" th:id="password" th:name="password" class="form-control" id="exampleInputPassword1" placeholder="密码">
-    </div>
-    <!--<div class="form-group">
-        <label for="exampleInputFile">文件</label>
-        <input type="file" id="exampleInputFile">
-        <p class="help-block">示例块级帮助文本</p>
-    </div>-->
-    <div class="checkbox">
-        <label>
-            <input type="checkbox" th:name="remember"> 记住
-        </label>
-    </div>
-    <button type="submit" class="btn btn-default">提交</button>
-</form>
+<div th:class="text-center">
+    <form th:id="form" th:action="@{/login}" th:method="post" th:class="form-signin">
+        <h1 class="h3 mb-3 font-weight-normal" th:text="#{login.tip}">请登录</h1>
+        <h3>[(${error != null}?${error}:'')]</h3>
+        <!--<div class="form-group">
+            <label for="exampleInputEmail1">邮箱</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="邮箱">
+        </div>-->
+        <div class="form-group">
+            <input type="text" th:name="username" class="form-control" id="inputName1" placeholder="用户名" th:placeholder="#{login.username}">
+        </div>
+        <div class="form-group">
+            <input type="password" th:id="password" th:name="password" class="form-control" id="inputPassword1" placeholder="密码" th:placeholder="#{login.password}">
+        </div>
+        <!--<div class="form-group">
+            <label for="exampleInputFile">文件</label>
+            <input type="file" id="exampleInputFile">
+            <p class="help-block">示例块级帮助文本</p>
+        </div>-->
+        <div class="checkbox">
+            <label>
+                <input type="checkbox" th:name="remember"> [[#{login.remember}]]
+            </label>
+        </div>
+        <button type="submit" class="btn btn-default" th:text="#{login.submit}">提交</button>
+        <br/>
+        <a class="btn btn-sm" th:href="@{/login(l='zh_CN')}" th:text="#{login.CN}">中文</a>
+        <a class="btn btn-sm" th:href="@{/login(l='en_US')}" th:text="#{login.US}">English</a>
+    </form>
+</div>
 
 </body>
 </html>
