--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,11 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <title>学生管理系统</title>
-</head>
-<body>
-<h2>OK</h2>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
+    <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
 
-<a th:href="@{/test.html}">test.html</a>
+    <link th:href="@{{path}/css/common.css(path=${#httpServletRequest.getContextPath()})}" href="css/common.css" rel="stylesheet">
+    <script th:src="@{{path}/js/common.js(path=${#servletContext.contextPath})}" src="js/common.js"></script>
+</head>
+<body class="text-center">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation" th:fragment="top">
+    <div class="container">
+        <div class="navbar-header">
+            <form class="navbar-form navbar-left" th:action="@{/login}" id="login">
+                <!--<a class="navbar-brand bg-info" href="#" onclick="login()" th:href="@{/login}" th:text="'欢迎 ' + ${session.username}">欢迎 您！</a>-->
+                <button type="submit" class="btn btn-sm" th:text="'欢迎 ' + ${session.username}">欢迎 您！</button>
+            </form>
+        </div>
+        <!--<div>
+            <ul class="nav navbar-nav">
+                <li>
+                    <a href="#" th:href="@{/grade/gradelist}">年级列表</a>
+                </li>
+                <li>
+                    <a href="#" th:href="@{/subjectlist}">学科列表</a>
+                </li>
+                <li>
+                    <a href="#" th:href="@{/teacherlist}">教师列表</a>
+                </li>
+                <li>
+                    <a href="#" th:href="@{/clazzlist}">班级列表</a>
+                </li>
+                <li>
+                    <a href="#" th:href="@{/studentlist}">学生列表</a>
+                </li>
+                <li>
+                    <a href="#" th:href="@{/testlist}">考试列表</a>
+                </li>
+                <li>
+                    <a href="#" th:href="@{/resultslist}">成绩列表</a>
+                </li>
+                <li>
+                    <a href="#" th:href="@{/loginlist}">登录列表</a>
+                </li>
+            </ul>
+        </div>-->
+        <div class="nav navbar-nav">
+            <a href="#" class="btn btn-default btn-sm" th:href="@{/grade/gradelist}">年级列表</a>
+            <a href="#" class="btn btn-default btn-sm" th:href="@{/subjectlist}">学科列表</a>
+            <a href="#" class="btn btn-default btn-sm" th:href="@{/teacherlist}">教师列表</a>
+            <a href="#" class="btn btn-default btn-sm" th:href="@{/clazzlist}">班级列表</a>
+            <a href="#" class="btn btn-default btn-sm" th:href="@{/studentlist}">学生列表</a>
+            <a href="#" class="btn btn-default btn-sm" th:href="@{/testlist}">考试列表</a>
+            <a href="#" class="btn btn-default btn-sm" th:href="@{/resultslist}">成绩列表</a>
+            <a href="#" class="btn btn-default btn-sm" th:href="@{/loginlist}">登录列表</a>
+        </div>
+        <div>
+            <form class="navbar-form navbar-left" role="search">
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Search">
+                </div>
+                <button type="submit" class="btn btn-default">搜索</button>
+            </form>
+        </div>
+        <div>
+            <ul class="nav navbar-nav">
+                <li>
+                    <a href="#" th:class="bg-danger" th:href="@{/logout}">注销</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+</nav>
+<div>
+    <span>欢迎使用学生管理系统...</span>
+</div>
 
 </body>
 </html>
