--- a/src/main/resources/templates/userlogin.html
+++ b/src/main/resources/templates/userlogin.html
@@ -14,9 +14,8 @@
     <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
 
-    <script th:href="@{js/common.js}" src="js/common.js"></script>
-
-    <link th:href="@{css/common.css}" href="css/common.css" rel="stylesheet">
+    <link th:href="@{{path}/css/common.css(path=${#httpServletRequest.getContextPath()})}" href="css/common.css" rel="stylesheet">
+    <script th:src="@{{path}/js/common.js(path=${#servletContext.contextPath})}" src="js/common.js"></script>
 
 </head>
 <body th:class="text-center">
@@ -25,24 +24,15 @@
     <form th:id="form" th:action="@{/login}" th:method="post" th:class="form-signin">
         <h1 class="h3 mb-3 font-weight-normal" th:text="#{login.tip}">请登录</h1>
         <h3>[(${error != null}?${error}:'')]</h3>
-        <!--<div class="form-group">
-            <label for="exampleInputEmail1">邮箱</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="邮箱">
-        </div>-->
         <div class="form-group">
             <input type="text" th:name="username" class="form-control" id="inputName1" placeholder="用户名" th:placeholder="#{login.username}">
         </div>
         <div class="form-group">
             <input type="password" th:id="password" th:name="password" class="form-control" id="inputPassword1" placeholder="密码" th:placeholder="#{login.password}">
         </div>
-        <!--<div class="form-group">
-            <label for="exampleInputFile">文件</label>
-            <input type="file" id="exampleInputFile">
-            <p class="help-block">示例块级帮助文本</p>
-        </div>-->
         <div class="checkbox">
             <label>
-                <input type="checkbox" th:name="remember"> [[#{login.remember}]]
+                <input th:checked="checked" type="checkbox" th:name="remember"> [[#{login.remember}]]
             </label>
         </div>
         <button type="submit" class="btn btn-default" th:text="#{login.submit}">提交</button>
